// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation Form - Renders Correctly 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Create Event"
  />
   
  <div>
    <h1
      class="mb-2 text-3xl font-normal text-main font-heading"
    >
      
      Create Event
    
    </h1>
     
    <!---->
     
    <form>
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Name:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Date: (YYYY-MM-DD)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Club/ Organiser:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Website: (URL)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="url"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Results: (URL)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="url"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Winsplits: (URL)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="url"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Routegadget: (URL)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="url"
        />
      </div>
       
      <dropdown-input-stub
        label="League:"
        list=""
        shift="true"
        value=""
      />
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          More Information:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <button
        class="button-lg"
      >
        Create Event
      </button>
       
      <!---->
    </form>
  </div>
   
  <!---->
</div>
`;

exports[`Update Form - Renders Correctly 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Edit Event"
  />
   
  <div>
    <!---->
     
    <h1
      class="mb-2 text-3xl font-normal text-main font-heading"
    >
      
      Edit Event
    
    </h1>
     
    <form>
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Name:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Date: (YYYY-MM-DD)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Club/ Organiser:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Website: (URL)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="url"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Results: (URL)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="url"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Winsplits: (URL)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="url"
        />
      </div>
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          Routegadget: (URL)
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="url"
        />
      </div>
       
      <dropdown-input-stub
        label="League:"
        list=""
        shift="true"
        value=""
      />
       
      <div
        class="relative text-input top--4"
      >
        <label
          class="relative p-1 pb-0 mx-3 text-sm bg-white select-none font-heading text-main bottom--3"
        >
          More Information:
        </label>
         
        <input
          class="w-full px-4 py-2 border outline-none border-main rounded-shape text-body"
          type="text"
        />
      </div>
       
      <!---->
       
      <button
        class="button-lg"
      >
        Update Event
      </button>
    </form>
  </div>
   
  <!---->
</div>
`;
